@startuml
!include <office/Concepts/globe_internet>
!include <office/Concepts/documents>
!include <office/Users/user>
!include style.puml

class AddressBookStateManager MODEL_COLOR {
  - int currentStatePointer
  + Modification undo()
  + Modification redo()
  + void commit(Modification)
}

class AddressBookStateNode MODEL_COLOR_T2
class AddressBook MODEL_COLOR_T2
class Modification MODEL_COLOR_T1
class ReadOnlyAddressBook MODEL_COLOR_T1


AddressBookStateManager *--> "1..*" AddressBookStateNode
AddressBookStateManager --> "1" AddressBook
AddressBookStateNode "1" --> "1" Modification
AddressBookStateNode "1" --> "1" ReadOnlyAddressBook

@enduml
